# pacu3

./: Makefile  README.md  cli.py  pyproject.toml
pacu/: __init__.py  cli.py  config.py  resources.py  resources_test.py
pacu/aws/: __init__.py  creds.py  ec2.py  ec2_test.py  ingest.py  resources.py  role.py  role_test.py  test_creds.py  user.py  user_test.py  users.py  utils.py
pacu/aws/lib/: boto.py  creds.py  lq.py  role.py  role_svc.py  shapes.py
pacu/aws/lib/discovery/: cloudtrail.py  list_roles.py
pacu/aws/lib/exploit/: role_bruteforce.py
pacu/aws/repo/: __init__.py  ingest.py  list.py
pacu/aws/role/: __init__.py  create.py  delete.py  svc.py
pacu/aws/role/trust/: __init__.py  create.py  delete.py
pacu/lib/: utils.py
pacu/lib/graph/: access.py
pacu/repo/: __init__.py  list.py
tests/: lib.py  resources_test.py
tests/aws/: creds_test.py  ec2_test.py  role_test.py  user_test.py
tests/aws/lib/: creds_test.py  lq_test.py  role_test.py  shape_test.py
tests/aws/lib/discovery/: cloudtrail_test.py  listroles_test.py
tests/aws/lib/exploit/: bruteforce_role_test.py  cloudtrail_test.py
tests/aws/repo/: ingest_test.py  list_test.py
tests/aws/role/: role_test.py  svc_test.py  trust_test.py
