[tool.poetry]
name = "pacu"
version = "2.0"
description = "The AWS exploitation framework, designed for testing the security of Amazon Web Services environments."
license = "MIT"
authors = ["Ryan Gerstenkorn <ryan.gerstenkorn@rhinosecuritylabs.com>"]
readme = "README.md"
homepage = "https://pypi.org/project/pacu"
documentation = "https://pacu.readthedocs.io"
repository = "https://github.com/RyanJarv/pacu"
keywords = []
classifiers = [
    # TODO: update this list to match your application: https://pypi.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 1 - Planning",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"

typer = "^0.3.2"
prompt-toolkit = "^3.0.19"
boto3 = "^1.17.109"

[tool.poetry.dev-dependencies]
boto3-stubs = {extras = ["iam"], version = "^1.17.109"}

# Formatters
black = ">=20.8b1"

# Linters
mypy = "*"
pydocstyle = "*"
pylint = ">=2.6.0"

# Testing
pytest = ">=5.3.2"

[tool.poetry.scripts]
pacu = "pacu.cli:app"

[tool.black]
target-version = ["py38", "py39"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
